写累了，去楼上装系统。今天把画图部分搞定了，下一步就是实现delaunayTriangulation

--- a/DelaunayTriangulation/code/CMakeLists.txt
+++ b/DelaunayTriangulation/code/CMakeLists.txt
@@ -10,6 +10,6 @@ add_executable(DelaunayTriangulation main.cpp)
 target_link_libraries(DelaunayTriangulation ${OpenCV_LIBRARIES})
 
 add_executable(testVector 
-testVector.cpp GLOBAL.h Vector.h Triangle.h)
+testVector.cpp GLOBAL.h Vector.h Triangle.h Draw.h DelaunayTriangulation.h)
 
 target_link_libraries(testVector ${OpenCV_LIBRARIES})
