在撰写设计文档的同时简单调整了一些顺序

--- a/DelaunayTriangulation/code/.vscode/settings.json
+++ b/DelaunayTriangulation/code/.vscode/settings.json
@@ -2,6 +2,7 @@
     "C_Cpp.errorSquiggles": "enabled",
     "files.associations": {
         "*.rmd": "markdown",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "cmath": "cpp"
     }
 }
